--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 }
             }
 
-            $(window).on("storage", function(e) {
+            $(window).on("storage", function(event) {
                 if (event.key == "get-session") {
                     //Return sessionStorage
                     localStorage.setItem("session", sessionStorage.getItem("session-popup"));
