left position now responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         position: absolute;
         margin: 0 auto;
         top: 10%;
-        left: 32%;
+        left: calc(50% - 330px);
         z-index: 1002;
 
         display: none;
